Amended code to retreive officers list from Incorporation Information

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -116,6 +116,11 @@ microservice {
         uri = "/incorporation-frontend-stubs"
         port = 9986
       }
+      incorporation-information {
+        host = localhost
+        uri = "/incorporation-information"
+        port = 9976
+      }
       address-lookup-frontend {
         host = localhost
         port = 9028
